--- a/global.css
+++ b/global.css
@@ -24,6 +24,7 @@ body {
   overflow-x: hidden;
   background-color: #474747;
   color: #4dd827, #67f100, #eeff08, #13ff29, #000;
+  color: #e3d5ba, #e86701, #474747;
   color: #e3d5ba;
   font-family: "Dosis", sans-serif;
 }
@@ -38,53 +39,6 @@ p {
   margin: 0 0 .3em;
 }
 
-main,
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-main {
-  position: relative;
-  z-index: 10;
-  min-height: calc(100vh - 8rem);
-  padding: 1rem;
-  font-size: 1.6rem;
-  animation: 2s ease-in-out 0s infinite alternate breathe;
-}
-
-footer {
-  position: absolute;
-  right: 0;
-  bottom: 4rem;
-  left: 0;
-  padding: .5rem 1rem;
-  height: 4rem;
-  text-align: center;
-}
-
-#particles {
-  /* filter: blur(2px); */
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.list-inline {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 a {
   color: #e86701;
   text-decoration: none;
@@ -93,26 +47,4 @@ a {
 a:hover {
   color: #e3d5ba;
   transition: color .15s ease;
-}
-
-.icon-link {
-  color: #e3d5ba;
-  display: block;
-  margin: 0 0.5em;
-}
-
-.icon-link:hover {
-  color: #e86701;
-}
-
-@keyframes breathe {
-  from {
-    opacity: 1;
-    text-shadow: #e3d5bacc 1px 1px 5px;
-  }
-
-  to {
-    opacity: .5;
-    text-shadow: #fffc 1px 1px 5px;
-  }
 }
