--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -84,6 +84,23 @@ label {
   font-weight: bold;
 }
 
+input[type="text"] {
+  border-radius: 5px;
+  font-size: 0.8em;
+  padding: 0.4em 0.5em;
+  line-height: 1;
+  color: $white;
+  background-color: darken($gray, 5%);
+  border: 1px solid $white;
+
+  &:focus {
+    background-color: darken($gray, 10%);
+    border-color: darken($gray, 5%);
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba($gray, .075),0 0 4px rgba($orange, .8);
+  }
+}
+
 form {
   text-align: center;
 }
