--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -97,7 +97,7 @@ input[type="text"] {
     background-color: darken($gray, 10%);
     border-color: darken($gray, 5%);
     outline: 0;
-    box-shadow: inset 0 1px 1px rgba($gray, .075),0 0 4px rgba($orange, .8);
+    box-shadow: inset 0 1px 1px rgba($gray, 0.075), 0 0 4px rgba($orange, 0.8);
   }
 }
 
